tests/invalid/simple/DefiniteAssign_CompileFail_4.whiley
void System::f(string a):
    print a

void System::main([string] args):
    print "HELLO"
    x->f("WORLD")
